@@ -1,0 +1,6 @@
+{
+"name" : "Java Script Language Plugin",
+"version" : "0.0.1",
+"langname" : "Javascript",
+"mimetypes" : "application/javascript"
+}
