@@ -1,4 +1,5 @@
 0.6.0
+Added javascript language plugin.
 Added html language plugin.
 Switched to sytntax highlighting plugins.
 
